WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44843
REGRESSION(
r66324
): Fix warnings in editing/ApplyStyleCommand.cpp
https://bugs.webkit.org/show_bug.cgi?id=44843
Summary
REGRESSION(r66324): Fix warnings in editing/ApplyStyleCommand.cpp
Csaba Osztrogonác
Reported
2010-08-29 14:31:22 PDT
gcc warnings: ../../../WebCore/editing/ApplyStyleCommand.cpp:1209: warning: suggest parentheses around && within || ../../../WebCore/editing/ApplyStyleCommand.cpp:1210: warning: suggest parentheses around && within ||
Attachments
proposed fix
(1.55 KB, patch)
2010-08-29 14:33 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
proposed fix 2
(1.40 KB, patch)
2010-08-29 23:52 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-08-29 14:33:29 PDT
Created
attachment 65862
[details]
proposed fix
Ryosuke Niwa
Comment 2
2010-08-29 14:42:44 PDT
Comment on
attachment 65862
[details]
proposed fix
> WebCore/editing/ApplyStyleCommand.cpp:1210 > + || (equivalent.attribute && !element->hasAttribute(*equivalent.attribute)))
Looks good to me. Sorry about the regression.
Csaba Osztrogonác
Comment 3
2010-08-29 14:47:48 PDT
(In reply to
comment #2
)
> Looks good to me. Sorry about the regression.
Not problem, now it isn't a big problem, but we are going to treat warnings as errors on Qt port. (with gcc -Werror option) After that all warnings will cause a build fail. ( See
https://bugs.webkit.org/show_bug.cgi?id=43191
)
Csaba Osztrogonác
Comment 4
2010-08-29 15:09:17 PDT
Comment on
attachment 65862
[details]
proposed fix Clearing flags on attachment: 65862 Committed
r66338
: <
http://trac.webkit.org/changeset/66338
>
Csaba Osztrogonác
Comment 5
2010-08-29 15:09:26 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-08-29 15:51:44 PDT
http://trac.webkit.org/changeset/66338
might have broken Qt Linux Release
Csaba Osztrogonác
Comment 7
2010-08-29 23:52:14 PDT
Created
attachment 65884
[details]
proposed fix 2 Crazy gcc, there are one more warning in line 1208, but it reported line 1209 : ../../../WebCore/editing/ApplyStyleCommand.cpp:1209: warning: suggest parentheses around && within ||
Csaba Osztrogonác
Comment 8
2010-08-29 23:53:01 PDT
(In reply to
comment #6
)
>
http://trac.webkit.org/changeset/66338
might have broken Qt Linux Release
No, it isn't.
Csaba Osztrogonác
Comment 9
2010-08-30 02:46:31 PDT
Comment on
attachment 65884
[details]
proposed fix 2 Landed in
http://trac.webkit.org/changeset/66378
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug