2010-08-29  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Darin Adler.

        REGRESSION(r66324): Fix warnings in editing/ApplyStyleCommand.cpp
        https://bugs.webkit.org/show_bug.cgi?id=44843

        * editing/ApplyStyleCommand.cpp:
        (WebCore::ApplyStyleCommand::removeImplicitlyStyledElement): Suggested parentheses added around && within ||


Canonical link: https://commits.webkit.org/57103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66338 268f45cc-cd09-0410-ab3c-d52691b4dbfc